--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
 
     implementation project(':xListView')
+
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'cn.bingoogolapple:bga-banner:2.2.5@aar'
 }
