--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".activity.SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -82,6 +83,7 @@
         <activity android:name=".activity.applyBeMemberActivity" />
         <activity android:name=".activity.CreateFarmActivity" />
         <activity android:name=".activity.FarmEventActivity" />
+        <activity android:name=".activity.LoginActivity"/>
         <activity android:name=".activity.MyFarmActivity"></activity>
     </application>
 
